# arche

./: .bumpversion.cfg  .drone.yml  .readthedocs.yml  .travis.yml  CHANGES.md  LICENSE  Pipfile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: .buildinfo  API.html  Compare.html  Handling-items-of-different-types.html  Quickstart.html  Strategy.html  basics.html  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: API.doctree  Compare.doctree  Quickstart.doctree  basics.doctree  index.doctree
docs/_sources/: API.ipynb.txt  Compare.ipynb.txt  basics.ipynb.txt  index.rst.txt
docs/_static/: documentation_options.js
docs/api/: arche.arche.html  arche.data_quality_report.html  arche.figures.graphs.html  arche.figures.html  arche.figures.tables.html  arche.html  arche.quality_estimation_algorithm.html  arche.readers.html  arche.readers.items.html  arche.readers.schema.html  arche.report.html  arche.rules.category.html  arche.rules.category_coverage.html  arche.rules.coverage.html  arche.rules.duplicates.html  arche.rules.garbage_symbols.html  arche.rules.html  arche.rules.json_schema.html  arche.rules.metadata.html  arche.rules.other_rules.html  arche.rules.others.html  arche.rules.price.html  arche.rules.result.html  arche.schema_definitions.html  arche.tools.api.html  arche.tools.helpers.html  arche.tools.html  arche.tools.pandas.html  (+5 more)
tests/: conftest.py  test_arche.py  test_bitbucket.py  test_conftest.py  test_dqr.py  test_integration.py  test_report.py
(+179 files in other folders)
