[metadata]
name = arche
version = 0.3.5
description = Analyze Scrapy Cloud data
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = scrapinghub, scraping, data, data-visualization, data-analysis, pandas
maintainer = Scrapinghub, manycoding
maintainer_email = info@scrapinghub.com
url = http://github.com/scrapinghub/arche
license = MIT
classifiers = 
    Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
	Programming Language :: Python :: 3.7

[options]
package_dir = 
	=src
packages = find:
setup_requires = setuptools_scm
install_requires = 
    pandas
    scrapinghub[msgpack]
    plotly>=3.8.0
    genson
    boto3
    jsonschema[format]>=3.0.0
    fastjsonschema
    perfect-jsonschema
    colorama
    tqdm
    ipywidgets
zip_safe = True

[options.extras_require]
tests =
    pytest
    pytest-mock
    mock
    pytest-cov
    pytest-pythonpath
pep8tests =
    flake8
    flake8-import-order
    flake8-bugbear
    black
docs =
    sphinx-autoapi
    recommonmark
    nbsphinx

[options.packages.find]
where = src
